# SungemSDK-Cpp

./: .gitignore  README.md  README.zh_CN.md
examples/apps/MobileNet-SSD/: CMakeLists.txt  README.md  main.cpp
examples/apps/gender_age_lbp/: CMakeLists.txt
examples/apps/gender_age_lbp/cpp/: gender_age_lbp.cpp
installer/Linux/CentOS/: install.sh
installer/Linux/Fedora/: install.sh
installer/Linux/Raspbian/: install.sh
installer/macOS/: install.sh
libhs_highapi/: CMakeLists.txt
libhs_highapi/include/: device.hpp  exception.hpp  exception_util.hpp  graph.hpp  hsapi.hpp  log.hpp  result.hpp  tensor.hpp
libhs_highapi/src/: device.cpp  exception.cpp  exception_util.cpp  graph.cpp  hs_cpp.hpp  hsapi.cpp  result.cpp  tensor.cpp
